# keeling-schedule-research

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  routes.py
app/benchmarking/: metrics_logger.py
app/kernel/: llm_config.py  llm_kernel.py  llm_retry_handler.py  prompt_parser.py
app/logging/: _config.py  debug_logger.py
app/models/: amendments.py  legi_element.py
app/services/: amendment_processor.py  amendment_tracker.py  keeling_service.py  utils.py  xml_handler.py
app/utils/: doc_type_utils.py  progress_utils.py
scripts/: setup.sh
tests/: conftest.py
tests/data/: amended_act_insertion.xml  amended_act_substitution.xml  amending_bill.xml  amending_bill1.xml  original_act.xml
tests/data/Agricultural Holdings (Scotland) Act 2003/: act.xml  expected_table_of_amendments.json
tests/data/Bankruptcy (Scotland) Act 2016/: act.xml  bill.xml  expected_table_of_amendments.json  table_of_amendments.csv
tests/data/Employment Rights Act 1996/: act.xml  bill.xml  expected_table_of_amendments.json  table_of_amendments.csv
tests/data/Housing Act 2004/: act.xml  bill.xml  expected_table_of_amendments.json  table_of_amendments.csv
tests/functional/services/: test_keeling_service_manual.py
tests/unit/: test_config.py  test_init.py  test_routes.py
tests/unit/benchmarking/: test_metrics_logger.py
tests/unit/kernel/: test_llm_config.py  test_llm_kernel.py  test_llm_retry_handler.py  test_prompt_parser.py
tests/unit/logging/: test_debug_logger.py  test_logging_config.py
tests/unit/models/: test_amendments.py  (+1 more)
(+13 files in other folders)
